--- a/FrontEnd/css/style.css
+++ b/FrontEnd/css/style.css
@@ -74,7 +74,7 @@
     box-shadow: inset 300px 0 0 0 var(--bs-light) !important;
     color: var(--bs-primary) !important;
 }
-
+.carousel-header
 .btn.btn-light {
     box-shadow: inset 0 0 0 0 var(--bs-primary);
 }
