--- a/ProfilDesaPete/public/css/loginstyle.css
+++ b/ProfilDesaPete/public/css/loginstyle.css
@@ -124,3 +124,11 @@ form .button input:hover {
 form .signup-link a:hover {
   text-decoration: underline;
 }
+
+ul li{
+    list-style-type: none;
+    color: red;
+    text-align: center;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
