--- a/FrontEnd/css/style.css
+++ b/FrontEnd/css/style.css
@@ -1258,3 +1258,32 @@
 }
 
 
+.btn-hover{
+    text-align: left;
+}
+
+.destination-img {
+    position: relative;
+    display: inline-block;
+}
+
+.destination-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+}
+
+.destination-img:hover .destination-overlay {
+    opacity: 1;
+}
+
