--- a/FrontEnd/css/style.css
+++ b/FrontEnd/css/style.css
@@ -1330,5 +1330,41 @@
     position: relative;
 }
 
-  
+/* kotak info dan map */
+.containerInfoMap {
+    display: flex;
+    width: 80%;
+    background: white;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    margin-left: 180px;
+}
+.info {
+    width: 50%;
+    padding: 20px;
+}
+.map-container {
+    width: 50%;
+}
+iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
+}
+.info h2 {
+    margin-top: 0;
+    color: #222;
+}
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+.info td {
+    padding: 8px 0;
+}
+.highlight {
+    font-weight: bold;
+    color: #333;
+}
 
