--- a/FrontEnd/css/style.css
+++ b/FrontEnd/css/style.css
@@ -1371,6 +1371,7 @@
 .map-container {
   width: 50%;
 }
+
 iframe {
   width: 100%;
   height: 100%;
@@ -1423,12 +1424,6 @@ table {
   object-fit: cover;
 }
 
-/* .cardBerita-body {
-    flex-grow: 1; 
-    padding: 15px;
-    display: flex;
-    flex-direction: column;
-} */
 
 .cardBerita-body p {
   flex-grow: 1; /* Supaya deskripsi memenuhi ruang yang ada */
@@ -1467,7 +1462,50 @@ table {
 .map { 
     height: 500px; width: 100%; 
 }
-/* Bantar Panjang */
+
+/* PROFILE DESA */
 .small-text{
-  
+    font-size: 0.7em; /* Ukuran lebih kecil */
+    font-weight: normal; /* Supaya gak terlalu tebal */
+} 
+
+.containerProDes {
+  display: flex;
+  width: 60%;
+  background: white;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  margin: 0 auto; /* Ini bikin container ke tengah */
+  align-items: center;
+  justify-content: center; /* Biar konten di dalamnya juga tengah */
+}
+
+.proDes {
+  width: 50%;
+  padding: 20px;
+}
+
+.gmbrDesa {
+  width: 50%;
+}
+.gmbrDesa img {
+  width: 100%;
+  height: 100%;
+  border: none;
+}
+.proDes h2 {
+  margin-top: 0;
+  color: #222;
+}
+.proDes table {
+  width: 100%;
+  border-collapse: collapse;
+}
+.proDes td {
+  padding: 8px 0;
+}
+.proDes {
+  font-weight: bold;
+  color: #333;
 }
