--- a/FrontEnd/css/style.css
+++ b/FrontEnd/css/style.css
@@ -1216,7 +1216,7 @@
 /*** Subscribe Start ***/
 .subscribe {
   background: linear-gradient(rgba(19, 53, 123, 0.6), rgba(19, 53, 123, 0.6)),
-    url(../img/subscribe-img.jpg);
+    url(../img/sawah.jpg);
   background-attachment: fixed;
   background-position: center center;
   background-repeat: no-repeat;
