--- a/FrontEnd/css/style.css
+++ b/FrontEnd/css/style.css
@@ -1483,7 +1483,7 @@ table {
 
 .containerProDes {
   display: flex;
-  width: 60%;
+  width: 80%;
   background: white;
   border-radius: 10px;
   overflow: hidden;
@@ -1503,16 +1503,21 @@ table {
 }
 .gmbrDesa img {
   width: 100%;
-  height: 100%;
+  height: 90%;
   border: none;
 }
 .proDes h2 {
   margin-top: 0;
   color: #222;
+  font-size: 35px;
+}
+.proDes p {
+  font-size: 20px;
 }
 .proDes table {
   width: 100%;
   border-collapse: collapse;
+  font-size: 15px;
 }
 .proDes td {
   padding: 8px 0;
