--- a/FrontEnd/css/style.css
+++ b/FrontEnd/css/style.css
@@ -166,7 +166,8 @@
 }
 
 .sticky-top.navbar-light .navbar-nav .nav-link {
-  padding: 20px 15px;
+  height: 100% !important;
+  /* padding: 20px 15px; */
   color: var(--bs-dark) !important;
 }
 
