--- a/FrontEnd/css/style.css
+++ b/FrontEnd/css/style.css
@@ -163,10 +163,11 @@
   font-weight: 400;
   outline: none;
   transition: 0.5s;
+  height: 100% !important;
+  text-wrap: nowrap;
 }
 
 .sticky-top.navbar-light .navbar-nav .nav-link {
-  height: 100% !important;
   /* padding: 20px 15px; */
   color: var(--bs-dark) !important;
 }
@@ -300,7 +301,7 @@
 
   .navbar-light .navbar-nav .nav-link:hover::before,
   .navbar-light .navbar-nav .nav-link.active::before {
-    height: calc(100% + 1px);
+    height: calc(100%);
     left: 1px;
   }
 
