--- a/FrontEnd/css/style.css
+++ b/FrontEnd/css/style.css
@@ -155,7 +155,7 @@
 }
 
 .navbar-light .navbar-nav .nav-link {
-  font-family: "Roboto", sans-serif;
+  /* font-family: "Roboto", sans-serif; */
   position: relative;
   padding: 35px 15px;
   color: var(--bs-white) !important;
@@ -393,7 +393,7 @@
   }
 
   .search-bar {
-    margin-top: -100px;
+    /* margin-top: -100px; */
     transition: 0.5s;
   }
 }
