--- a/ProfilDesaPete/public/css/admin/ready.css
+++ b/ProfilDesaPete/public/css/admin/ready.css
@@ -2084,12 +2084,12 @@ body {
 
 .sidebar {
   position: fixed;
-  top: 0;
+  top: 50px;
   bottom: 0;
   left: 0;
   width: 260px;
   display: block;
-  z-index: -1;
+  z-index: 1;
   color: #ffffff;
   font-weight: 200;
   background: #ffffff;
@@ -2239,13 +2239,23 @@ body {
   letter-spacing: .04em;
   margin-right: 5px;
 }
-
+.topbar{
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 50px;
+  z-index: 100;
+}
 .main-panel {
   position: relative;
   width: calc(100% - 260px);
   min-height: 100%;
   float: right;
   background: #f2f3f8;
+  margin-top: 50px;
+  overflow-y: auto;
+  z-index: 1;
 }
 .main-panel .content {
   padding: 30px 15px;
