--- a/FrontEnd/css/style.css
+++ b/FrontEnd/css/style.css
@@ -392,10 +392,10 @@
     opacity: 0;
   }
 
-  .search-bar {
-    /* margin-top: -100px; */
+  /* .search-bar {
+    margin-top: -100px;
     transition: 0.5s;
-  }
+  } */
 }
 /*** Carousel Hero Header End ***/
 
@@ -478,7 +478,7 @@
   transition: 0.5s;
 }
 
-.destination .tab-class .tab-content .tab-pane .destination-img .search-icon {
+/* .destination .tab-class .tab-content .tab-pane .destination-img .search-icon {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -490,9 +490,9 @@
   background: rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   transition: 0.5s;
-}
+} */
 
-.destination
+/* .destination
   .tab-class
   .tab-content
   .tab-pane
@@ -502,7 +502,7 @@
   i {
   opacity: 0;
   transition: 0.5s;
-}
+} */
 
 .destination .tab-class .nav-item {
   padding: 0 0 20px 0;
@@ -515,9 +515,9 @@
   color: var(--bs-white) !important;
 }
 
-.destination .tab-class .tab-content .destination-img:hover .search-icon {
+/* .destination .tab-class .tab-content .destination-img:hover .search-icon {
   background: rgba(19, 53, 123, 0.4);
-}
+} */
 
 .destination
   .tab-class
@@ -527,9 +527,9 @@
   bottom: 0;
 }
 
-.destination .tab-class .tab-content .destination-img:hover .search-icon a i {
+/* .destination .tab-class .tab-content .destination-img:hover .search-icon a i {
   opacity: 1;
-}
+} */
 
 .destination .tab-class .tab-content .destination-img img {
   transition: 0.5s;
